{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 36,
  "lineage": "d677d7c3-a5ab-7a66-33df-62b1a0720f2e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "app_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/applicationGateways/test-appgwy/backendAddressPools/backend-pool",
                "ip_addresses": [],
                "name": "backend-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/applicationGateways/test-appgwy/backendHttpSettingsCollection/backend-htst",
                "name": "backend-htst",
                "path": "/",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 1,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": null,
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/applicationGateways/test-appgwy/frontendIPConfigurations/frontend-ip",
                "name": "frontend-ip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/publicIPAddresses/test-appgwy-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/applicationGateways/test-appgwy/frontendPorts/frontend-port",
                "name": "frontend-port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/applicationGateways/test-appgwy/gatewayIPConfigurations/my-gateway-ip-configuration",
                "name": "my-gateway-ip-configuration",
                "subnet_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/AppGatewaySubnet"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/applicationGateways/test-appgwy/frontendIPConfigurations/frontend-ip",
                "frontend_ip_configuration_name": "frontend-ip",
                "frontend_port_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/applicationGateways/test-appgwy/frontendPorts/frontend-port",
                "frontend_port_name": "frontend-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/applicationGateways/test-appgwy/httpListeners/http-listener",
                "name": "http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/applicationGateways/test-appgwy",
            "identity": [],
            "location": "australiaeast",
            "name": "test-appgwy",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/applicationGateways/test-appgwy/backendAddressPools/backend-pool",
                "backend_address_pool_name": "backend-pool",
                "backend_http_settings_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/applicationGateways/test-appgwy/backendHttpSettingsCollection/backend-htst",
                "backend_http_settings_name": "backend-htst",
                "http_listener_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/applicationGateways/test-appgwy/httpListeners/http-listener",
                "http_listener_name": "http-listener",
                "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/applicationGateways/test-appgwy/requestRoutingRules/req-routing-rule",
                "name": "req-routing-rule",
                "priority": 0,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "test-network-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 1,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {
              "costcentre": "12345",
              "environment": "test"
            },
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_public_ip.app_gateway_pip",
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_application_rule_collection",
      "name": "az_application_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "test-fw",
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/azureFirewalls/test-fw/applicationRuleCollections/application-rules",
            "name": "application-rules",
            "priority": 1000,
            "resource_group_name": "test-network-rg",
            "rule": [
              {
                "description": "",
                "fqdn_tags": null,
                "name": "allow aks services",
                "protocol": [
                  {
                    "port": 443,
                    "type": "Https"
                  },
                  {
                    "port": 80,
                    "type": "Http"
                  }
                ],
                "source_addresses": [
                  "10.0.0.0/16",
                  "10.1.0.0/16",
                  "10.2.0.0/16"
                ],
                "source_ip_groups": null,
                "target_fqdns": [
                  "quay.io",
                  "*.azmk8s.io",
                  "k8s.gcr.io",
                  "*.auth.docker.io",
                  "*.cloudflare.docker.io",
                  "*.cloudflare.docker.com",
                  "*.registry-1.docker.io"
                ]
              },
              {
                "description": "",
                "fqdn_tags": null,
                "name": "allow oss services",
                "protocol": [
                  {
                    "port": 443,
                    "type": "Https"
                  },
                  {
                    "port": 80,
                    "type": "Http"
                  }
                ],
                "source_addresses": [
                  "10.0.0.0/16",
                  "10.1.0.0/16",
                  "10.2.0.0/16"
                ],
                "source_ip_groups": null,
                "target_fqdns": [
                  "download.opensuse.org",
                  "login.microsoftonline.com",
                  "*.ubuntu.com",
                  "dc.services.visualstudio.com",
                  "*.opinsights.azure.com",
                  "github.com",
                  "gcr.io",
                  "*.github.com",
                  "raw.githubusercontent.com",
                  "*.ubuntu.com",
                  "api.snapcraft.io",
                  "download.opensuse.org",
                  "storage.googleapis.com",
                  "security.ubuntu.com",
                  "azure.archive.ubuntu.com",
                  "changelogs.ubuntu.com"
                ]
              },
              {
                "description": "",
                "fqdn_tags": null,
                "name": "allow azure services",
                "protocol": [
                  {
                    "port": 443,
                    "type": "Https"
                  },
                  {
                    "port": 80,
                    "type": "Http"
                  }
                ],
                "source_addresses": [
                  "10.0.0.0/16",
                  "10.1.0.0/16",
                  "10.2.0.0/16"
                ],
                "source_ip_groups": null,
                "target_fqdns": [
                  "*.azurecr.io",
                  "*.blob.core.windows.net",
                  "*.trafficmanager.net",
                  "*.azureedge.net",
                  "*.microsoft.com",
                  "*.core.windows.net",
                  "aka.ms",
                  "*.azure-automation.net",
                  "*.azure.com",
                  "gov-prod-policy-data.trafficmanager.net",
                  "*.gk.australiaeast.azmk8s.io",
                  "*.monitoring.azure.com",
                  "*.oms.opinsights.azure.com",
                  "*.ods.opinsights.azure.com",
                  "*.microsoftonline.com",
                  "*.data.mcr.microsoft.com",
                  "*.cdn.mscr.io",
                  "mcr.microsoft.com",
                  "management.azure.com",
                  "login.microsoftonline.com",
                  "packages.microsoft.com"
                ]
              },
              {
                "description": "",
                "fqdn_tags": null,
                "name": "osupdates",
                "protocol": [
                  {
                    "port": 443,
                    "type": "Https"
                  },
                  {
                    "port": 80,
                    "type": "Http"
                  }
                ],
                "source_addresses": [
                  "10.0.0.0/16",
                  "10.1.0.0/16",
                  "10.2.0.0/16"
                ],
                "source_ip_groups": null,
                "target_fqdns": [
                  "download.opensuse.org",
                  "security.ubuntu.com",
                  "packages.microsoft.com",
                  "snapcraft.io"
                ]
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.az_firewall",
            "azurerm_public_ip.az_firewall_pip",
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_nat_rule_collection",
      "name": "nat_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Dnat",
            "azure_firewall_name": "test-fw",
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/azureFirewalls/test-fw/natRuleCollections/nat-rules",
            "name": "nat-rules",
            "priority": 1000,
            "resource_group_name": "test-network-rg",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "4.197.237.62"
                ],
                "destination_ports": [
                  "22"
                ],
                "name": "ssh-rule",
                "protocols": [
                  "TCP"
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": null,
                "translated_address": "10.0.2.4",
                "translated_port": "22"
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.az_firewall",
            "azurerm_network_interface.bastion_vm_nic",
            "azurerm_public_ip.az_firewall_pip",
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_network_rule_collection",
      "name": "az_network_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "test-fw",
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/azureFirewalls/test-fw/networkRuleCollections/network-rules",
            "name": "network-rules",
            "priority": 1000,
            "resource_group_name": "test-network-rg",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "*"
                ],
                "destination_fqdns": null,
                "destination_ip_groups": null,
                "destination_ports": [
                  "123"
                ],
                "name": "allow time service",
                "protocols": [
                  "UDP"
                ],
                "source_addresses": [
                  "10.0.0.0/16",
                  "10.1.0.0/16",
                  "10.2.0.0/16"
                ],
                "source_ip_groups": null
              },
              {
                "description": "",
                "destination_addresses": [
                  "*"
                ],
                "destination_fqdns": null,
                "destination_ip_groups": null,
                "destination_ports": [
                  "53"
                ],
                "name": "allow dns service",
                "protocols": [
                  "TCP",
                  "UDP"
                ],
                "source_addresses": [
                  "10.0.0.0/16",
                  "10.1.0.0/16",
                  "10.2.0.0/16"
                ],
                "source_ip_groups": null
              },
              {
                "description": "",
                "destination_addresses": [
                  "AzureContainerRegistry",
                  "MicrosoftContainerRegistry",
                  "AzureActiveDirectory"
                ],
                "destination_fqdns": null,
                "destination_ip_groups": null,
                "destination_ports": [
                  "*"
                ],
                "name": "allow tagged services",
                "protocols": [
                  "TCP",
                  "UDP"
                ],
                "source_addresses": [
                  "10.0.0.0/16",
                  "10.1.0.0/16",
                  "10.2.0.0/16"
                ],
                "source_ip_groups": null
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.az_firewall",
            "azurerm_public_ip.az_firewall_pip",
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion_vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-mgmt-rg/providers/Microsoft.Network/networkInterfaces/test-bas-vm-nic",
            "internal_domain_name_suffix": "fooiv2jwm14erghcra5xmsyeyf.px.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/BastionSubnet"
              }
            ],
            "location": "australiaeast",
            "name": "test-bas-vm-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "test-mgmt-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-mgmt-rg/providers/Microsoft.Network/networkSecurityGroups/test-bas-rule",
            "location": "australiaeast",
            "name": "test-bas-rule",
            "resource_group_name": "test-mgmt-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.2.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-bastion-subnet-internet-inbound-ssh",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "4.197.237.62/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "costcentre": "12345",
              "environment": "test"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_public_ip.az_firewall_pip",
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "app_gateway_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/publicIPAddresses/test-appgwy-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.197.237.61",
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "test-appgwy-pip",
            "resource_group_name": "test-network-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "az_firewall_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/publicIPAddresses/test-fw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.197.237.62",
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "test-fw-pip",
            "resource_group_name": "test-network-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "costcentre": "12345",
              "environment": "test"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "aks_firewall_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/routeTables/test-aks-fw-rt",
            "location": "australiaeast",
            "name": "test-aks-fw-rt",
            "resource_group_name": "test-network-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default_spoke_fw_route",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {
              "costcentre": "12345",
              "environment": "test"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.az_firewall",
            "azurerm_public_ip.az_firewall_pip",
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "firewall_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/routeTables/test-fw-rt",
            "location": "australiaeast",
            "name": "test-fw-rt",
            "resource_group_name": "test-network-rg",
            "route": [
              {
                "address_prefix": "10.0.0.0/16",
                "name": "default_hub_fw_route",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {
              "costcentre": "12345",
              "environment": "test"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.az_firewall",
            "azurerm_public_ip.az_firewall_pip",
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion_subnet_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/BastionSubnet",
            "network_security_group_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-mgmt-rg/providers/Microsoft.Network/networkSecurityGroups/test-bas-rule",
            "subnet_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/BastionSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_public_ip.az_firewall_pip",
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "nonprod_spoke_subnet_1_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/nonprod-spoke-vnet/subnets/nonprod-aks-subnet",
            "route_table_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/routeTables/test-aks-fw-rt",
            "subnet_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/nonprod-spoke-vnet/subnets/nonprod-aks-subnet",
            "timeouts": {
              "create": "2h",
              "delete": "2h"
            }
          },
          "dependencies": [
            "azurerm_firewall.az_firewall",
            "azurerm_public_ip.az_firewall_pip",
            "azurerm_resource_group.rg",
            "azurerm_route_table.aks_firewall_route_table",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "nonprod_spoke_subnet_2_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/nonprod-spoke-vnet/subnets/nonprod-web-subnet",
            "route_table_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/routeTables/test-aks-fw-rt",
            "subnet_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/nonprod-spoke-vnet/subnets/nonprod-web-subnet",
            "timeouts": {
              "create": "2h",
              "delete": "2h"
            }
          },
          "dependencies": [
            "azurerm_firewall.az_firewall",
            "azurerm_public_ip.az_firewall_pip",
            "azurerm_resource_group.rg",
            "azurerm_route_table.aks_firewall_route_table",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "nonprod_spoke_subnet_3_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/nonprod-spoke-vnet/subnets/nonprod-sql-subnet",
            "route_table_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/routeTables/test-aks-fw-rt",
            "subnet_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/nonprod-spoke-vnet/subnets/nonprod-sql-subnet",
            "timeouts": {
              "create": "2h",
              "delete": "2h"
            }
          },
          "dependencies": [
            "azurerm_firewall.az_firewall",
            "azurerm_public_ip.az_firewall_pip",
            "azurerm_resource_group.rg",
            "azurerm_route_table.aks_firewall_route_table",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "prod_spoke_subnet_1_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/prod-spoke-vnet/subnets/prod-aks-subnet",
            "route_table_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/routeTables/test-aks-fw-rt",
            "subnet_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/prod-spoke-vnet/subnets/prod-aks-subnet",
            "timeouts": {
              "create": "2h",
              "delete": "2h"
            }
          },
          "dependencies": [
            "azurerm_firewall.az_firewall",
            "azurerm_public_ip.az_firewall_pip",
            "azurerm_resource_group.rg",
            "azurerm_route_table.aks_firewall_route_table",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "prod_spoke_subnet_2_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/prod-spoke-vnet/subnets/prod-web-subnet",
            "route_table_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/routeTables/test-aks-fw-rt",
            "subnet_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/prod-spoke-vnet/subnets/prod-web-subnet",
            "timeouts": {
              "create": "2h",
              "delete": "2h"
            }
          },
          "dependencies": [
            "azurerm_firewall.az_firewall",
            "azurerm_public_ip.az_firewall_pip",
            "azurerm_resource_group.rg",
            "azurerm_route_table.aks_firewall_route_table",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "prod_spoke_subnet_3_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/prod-spoke-vnet/subnets/prod-sql-subnet",
            "route_table_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/routeTables/test-aks-fw-rt",
            "subnet_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/prod-spoke-vnet/subnets/prod-sql-subnet",
            "timeouts": {
              "create": "2h",
              "delete": "2h"
            }
          },
          "dependencies": [
            "azurerm_firewall.az_firewall",
            "azurerm_public_ip.az_firewall_pip",
            "azurerm_resource_group.rg",
            "azurerm_route_table.aks_firewall_route_table",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "hub-vnet",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f18a9c2b-6636-48fc-98e2-883f764b04c5",
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "location": "australiaeast",
            "name": "hub-vnet",
            "resource_group_name": "test-network-rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/BastionSubnet",
                "name": "BastionSubnet"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/AppGatewaySubnet",
                "name": "AppGatewaySubnet"
              }
            ],
            "tags": {
              "costcentre": "12345",
              "environment": "test"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "nonprod-spoke-vnet",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "52c1e0c7-f0c4-4d2e-9605-0f7569c076d8",
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/nonprod-spoke-vnet",
            "location": "australiaeast",
            "name": "nonprod-spoke-vnet",
            "resource_group_name": "test-network-rg",
            "subnet": [
              {
                "address_prefix": "10.2.0.0/24",
                "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/nonprod-spoke-vnet/subnets/nonprod-aks-subnet",
                "name": "nonprod-aks-subnet"
              },
              {
                "address_prefix": "10.2.1.0/24",
                "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/nonprod-spoke-vnet/subnets/nonprod-web-subnet",
                "name": "nonprod-web-subnet"
              },
              {
                "address_prefix": "10.2.2.0/24",
                "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/nonprod-spoke-vnet/subnets/nonprod-sql-subnet",
                "name": "nonprod-sql-subnet"
              }
            ],
            "tags": {
              "costcentre": "12345",
              "environment": "test"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "prod-spoke-vnet",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "476e6027-ec41-43c4-8f9e-d805886de62a",
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/prod-spoke-vnet",
            "location": "australiaeast",
            "name": "prod-spoke-vnet",
            "resource_group_name": "test-network-rg",
            "subnet": [
              {
                "address_prefix": "10.1.0.0/24",
                "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/prod-spoke-vnet/subnets/prod-aks-subnet",
                "name": "prod-aks-subnet"
              },
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/prod-spoke-vnet/subnets/prod-web-subnet",
                "name": "prod-web-subnet"
              },
              {
                "address_prefix": "10.1.2.0/24",
                "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/prod-spoke-vnet/subnets/prod-sql-subnet",
                "name": "prod-sql-subnet"
              }
            ],
            "tags": {
              "costcentre": "12345",
              "environment": "test"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub_to_nonprod_spoke_peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/virtualNetworkPeerings/hub_to_nonprod_spoke_peer",
            "name": "hub_to_nonprod_spoke_peer",
            "remote_virtual_network_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/nonprod-spoke-vnet",
            "resource_group_name": "test-network-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub_to_prod_spoke_peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/virtualNetworkPeerings/hub_to_prod_spoke_peer",
            "name": "hub_to_prod_spoke_peer",
            "remote_virtual_network_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/prod-spoke-vnet",
            "resource_group_name": "test-network-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "nonprod_spoke_to_hub_peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/nonprod-spoke-vnet/virtualNetworkPeerings/nonprod_spoke_to_hub_peer",
            "name": "nonprod_spoke_to_hub_peer",
            "remote_virtual_network_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "resource_group_name": "test-network-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "nonprod-spoke-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "prod_spoke_to_hub_peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/prod-spoke-vnet/virtualNetworkPeerings/prod_spoke_to_hub_peer",
            "name": "prod_spoke_to_hub_peer",
            "remote_virtual_network_id": "/subscriptions/b2375b5f-8dab-4436-b87c-32bc7fdce5d0/resourceGroups/test-network-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "resource_group_name": "test-network-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "prod-spoke-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    }
  ]
}